--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Summer_practice</string>
+    <string name="name">Name:</string>
+    <string name="height">Height:</string>
+    <string name="age">Age:</string>
+    <string name="weight">Weight:</string>
+    <string name="result">Result:</string>
+    <string name="calculate">Calculate</string>
 </resources>
